# SysyCC

./: .dockerignore  .gitignore  05_arr_defn4.s  AGENTS.md  CMakeLists.txt  Dockerfile  Makefile  PLAN.md  README.md  plan1.md  plan2.md  plan3.md  plan4.md  plan5.md  roadmap.md
cmake/: SysyCCAArch64CodegenConfig.cmake.in  SysyCCRiscv64CodegenConfig.cmake.in
doc/: README.md  compiler-learning-guide.md
doc/modules/: aarch64-llvm-backend-plan.md  ast.md  attribute.md  class-relationships.md  cli.md  common.md  compiler.md  diagnostic.md  dialect-refactor-plan.md  dialects.md  frontend.md  ir.md  legacy-pass.md  lexer.md  manual.md  parser.md  preprocess.md  scripts.md  semantic.md  tests.md
scripts/: codex_cli_watchdog.sh  profile_self_build.sh  refresh_host_compiler_object_compat.sh  run_iwyu.py  run_static_checks.sh  show_parse_tree.py  test_heavy_tool_wrapper.sh
scripts/prompts/: arm_perf_aggressive_codex_prompt.txt
src/: main.cpp
src/cli/: cli.cpp  cli.hpp
src/common/: integer_literal.cpp  integer_literal.hpp  intermediate_results_path.hpp  pointer_nullability_kind.hpp  source_language_config.hpp  source_line_map.cpp  source_line_map.hpp  source_location_service.cpp  source_location_service.hpp  source_manager.cpp  source_manager.hpp  source_mapping_view.cpp  source_mapping_view.hpp  source_span.cpp  source_span.hpp  string_literal.cpp  string_literal.hpp
src/compiler/: compiler.cpp  compiler.hpp  compiler_option.hpp  complier.cpp  complier.hpp  complier_option.hpp
src/error/: error_def.h
src/frontend/: lexer.l  lexer_driver.cpp  lexer_driver.h  lexer_scanner.cpp  lexer_scanner.hpp
src/pass/: pass_manager.cpp  pass_manager.hpp
src/tools/: sysycc_aarch64c_main.cpp  sysycc_riscv64c_main.cpp
tests/: arithmetic.sy  array_init.sh  array_init.sy  control_flow.sh  control_flow.sy  function_call.sh  function_call.sy  literal_formats.sh  minimal.sh  preprocess_define.sh  preprocess_undef.sh  preprocess_undef.sy  run_all.sh  run_full.sh  run_tier1.sh  run_tier2.sh  test_helpers.sh
tests/aarch64_backend_ll/: common.sh
tests/aarch64_backend_single_source/: .gitignore  README.md  UPSTREAM_REF.txt  common.sh  manifest.txt  probe_next_execute_batch.sh  smoke_manifest.txt  sync_upstream_cases.sh
tests/array_init/: run.sh
tests/asm/: aarch64_native_backend_test_utils.hpp
tests/ast_control_flow/: run.sh
tests/ast_float_return_type/: run.sh
tests/ast_function_call/: run.sh
tests/ast_member_access/: ast_member_access.sy  run.sh
tests/ast_minimal/: run.sh
tests/ast_multiple_functions/: run.sh
tests/ast_nested_init_list/: run.sh
tests/ast_pointer_types/: run.sh
tests/ast_source_span/: run.sh
tests/ast_stmt_extensions/: run.sh
tests/ast_top_level_decls/: run.sh
tests/ast_type_decls/: run.sh
tests/ast_unary_literals/: ast_unary_literals.sy  run.sh
tests/ast_unknown_expr/: ast_unknown_expr.sy  run.sh
tests/ast_unknown_expr_preservation/: ast_unknown_expr_preservation.sy  run.sh
tests/ast_unknown_guard/: ast_unknown_guard.sy  run.sh
tests/ast_void_return/: run.sh
tests/c_parser_extensions/: c_parser_extensions.sy  run.sh
tests/comment_literals/: run.sh
tests/comment_preprocess/: comment_preprocess.sy  run.sh
tests/compiler2025/: compiler2025_arm_common.sh  compiler2025_docker_common.sh  run_arm_functional.sh  run_arm_functional_in_docker.sh  run_arm_performance.sh  run_arm_performance_in_docker.sh  run_functional.sh  run_functional_in_docker.sh  run_host_ir_performance.sh  runtime_builtin_compat.c  sylib.c  sylib.h
tests/compiler2026/: README.md  run_arm_functional.sh  run_arm_functional_in_docker.sh  run_functional.sh  run_functional_in_docker.sh
tests/conditional_expr/: conditional_expr.sy  run.sh
tests/control_flow/: run.sh
tests/dot_member_access/: run.sh
tests/elif/: run.sh
tests/empty_token_stream_behavior/: run.sh
tests/function_call/: run.sh
tests/function_macro/: run.sh
tests/function_macro_argument_literal_bug/: function_macro_argument_literal_bug.sy  run.sh
tests/fuzz/: generate_and_build_csmith_cases.sh  run_csmith_cases.sh
tests/if0/: run.sh
tests/if1/: run.sh
tests/ifdef/: ifdef.sy  run.sh
tests/ifndef/: ifndef.sy  run.sh
tests/include_cycle_bug/: include_cycle_bug.sy  run.sh
tests/include_local/: include_local.sy  run.sh
tests/include_path/: run.sh
tests/invalid_macro_name_bug/: run.sh
tests/invalid_token_diagnostic/: run.sh
tests/lexer_global_state_bug/: run.sh
tests/lexer_operator_mix/: lexer_operator_mix.sy  run.sh
tests/lexer_parse_node_mode_guard/: run.sh
tests/literal_formats/: literal_formats.sy  run.sh
tests/macro_literal_expansion_bug/: macro_literal_expansion_bug.sy  run.sh
tests/minimal/: run.sh
tests/precise_token_kinds/: run.sh
tests/preprocess_define/: preprocess_define.sy  run.sh
tests/preprocess_dispatch_sentinel_bug/: run.sh
tests/preprocess_nested_conditionals/: run.sh
tests/preprocess_undef/: run.sh
tests/riscv64_backend_single_source/: README.md  common.sh  manifest.txt  remaining_manifest.txt
tests/run/: run_leetcode_generic.sh
tests/run/run_north_star_real_project_smoke/project/: CMakeLists.txt  Makefile
tests/run/run_north_star_real_project_smoke/project/app/: main.c
tests/run/run_north_star_real_project_smoke/project/include/: northstar.h
tests/run/run_north_star_real_project_smoke/project/src/: array.c  graph.c  hash.c  pipeline.c  search.c  sort.c  stats.c
tests/semantic_array_decay_call/: run.sh
tests/semantic_array_dimension_constant/: run.sh  semantic_array_dimension_constant.sy
tests/semantic_arrow_type/: run.sh
tests/semantic_assign_lvalue/: run.sh
tests/semantic_assign_type/: run.sh
tests/semantic_binary_arithmetic/: run.sh  semantic_binary_arithmetic.sy
tests/semantic_binary_bitwise/: run.sh  semantic_binary_bitwise.sy
tests/semantic_binary_logical/: run.sh  semantic_binary_logical.sy
tests/semantic_break_context/: run.sh
tests/semantic_call_arity/: run.sh  semantic_call_arity.sy
tests/semantic_call_target/: run.sh  semantic_call_target.sy
tests/semantic_call_type/: run.sh  (+1 more)
(+2996 files in other folders)
